feat: users me update, set company user, rabbitmq flow, group routes
