# docs/swagger.json
@@ -514,6 +514,42 @@
                 }
             }
         },
+        "/api/users/set-company/{company_id}": {
+            "get": {
+                "description": "Change company ID for user",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Set Company ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "\"60d5ec49f1c2b14c88f3c5e5\"",
+                        "description": "Company ID",
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/update": {
             "post": {
                 "description": "Update user information",
@@ -1067,6 +1103,10 @@
                 "phone_number": {
                     "type": "string",
                     "example": "628112123123"
+                },
+                "selected_company": {
+                    "type": "string",
+                    "example": "id"
                 },
                 "token": {
                     "type": "string",
